@@ -22,8 +22,8 @@ except ImportError:
 
 install_requires = [
     "Django>=2.0,<2.3",
-    "django-modelcluster>=4.2,<5.0",
-    "django-taggit>=0.23,<1.0",
+    "django-modelcluster>=5.0,<6.0",
+    "django-taggit>=1.0,<2.0",
     "django-treebeard>=4.2.0,<5.0",
     "djangorestframework>=3.7.4,<4.0",
     "draftjs_exporter>=2.1.5,<3.0",
